--- a/src/main/resources/templates/ModificarEditorial.html
+++ b/src/main/resources/templates/ModificarEditorial.html
@@ -87,19 +87,53 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div th:if="${exito}!=null" class="card text-white bg-success mb-3">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Exito</h5>
-                                        <p class="card-text" th:text="${exito}"></p>
+                                    <div th:if="${exito}!=null" class="card text-white bg-success mb-3">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Exito</h5>
+                                            <p class="card-text" th:text="${exito}"></p>
+                                        </div>
+                                    </div>
+                                    <div th:if="${error}!=null" class="card text-white bg-danger mb-3">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Error</h5>
+                                            <p class="card-text" th:text="${error}"></p>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item" style="background-color: rgb(245, 52, 91);">
+                                        <h2 class="accordion-header" id="headingTwo">
+                                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" 
+                                                    style="background-color: rgb(243, 79, 79);">
+                                                Borrar una editorial
+                                            </button>
+                                        </h2>
+                                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                             data-bs-parent="#accordionExample">
+                                            <div class="accordion-body">
+                                                <form action="/editorial/borrarEditorial" method="post">
+                                                    <div class="mb-3">
+                                                        <label for="exampleFormControlInput1" class="form-label">Ingrese el nombre de la Editorial que desea borrar.</label>
+                                                        <input type="text" class="form-control" id="exampleFormControlInput1" name="nombre">
+                                                    </div>
+                                                    <br/><button type="submit" class="btn btn-primary">Borrar Editorial</button>
+                                                </form>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div th:if="${borrado}!=null" class="card text-white bg-success mb-3">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Exito</h5>
+                                            <p class="card-text" th:text="${borrado}"></p>
+                                        </div>
+                                    </div>
+                                    <div th:if="${noBorrado}!=null" class="card text-white bg-danger mb-3">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Error</h5>
+                                            <p class="card-text" th:text="${noBorrado}"></p>
+                                        </div>
                                     </div>
                                 </div>
-                                <div th:if="${error}!=null" class="card text-white bg-danger mb-3">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Error</h5>
-                                        <p class="card-text" th:text="${error}"></p>
-                                    </div>
-                                </div>
+
                                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
                                         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
                                 crossorigin="anonymous"></script>
