--- a/src/main/resources/templates/MostrarEditorial.html
+++ b/src/main/resources/templates/MostrarEditorial.html
@@ -66,6 +66,10 @@
                                     </div>
                                 </nav>
                                 <h3 style="background-color: chartreuse;">Editoriales Disponibles</h3>
+                                <form class="d-flex" action="/editorial/buscarEditorial" method="post">
+                                    <input class="form-control me-2" type="search" placeholder="Buscar Editorial" aria-label="Search" name="nombre">
+                                        <button class="btn btn-success" type="submit">Buscar</button>
+                                </form>
                                 <table class="table" style="background-color: chartreuse;">
                                     <thead>
                                         <tr>
@@ -80,8 +84,24 @@
                                             <td th:text="${editorial.nombre}"></td>
                                             <td th:text="${editorial.alta}"></td>
                                         </tr>
+                                        <tr th:each="busqueda : ${buscarEditorial}">
+                                            <td th:text="${busqueda.id}"></td>
+                                            <td th:text="${busqueda.nombre}"></td>
+                                            <td th:text="${busqueda.alta}"></td>
+                                        </tr>
+                                        <div th:if="${encontrada}!=null" class="card text-white bg-success mb-3">
+                                            <div class="card-body">
+                                                <p class="card-text" th:text="${encontrada}"></p>
+                                            </div>
+                                        </div>
+                                        <div th:if="${noEncontrada}!=null" class="card text-white bg-danger mb-3">
+                                            <div class="card-body">
+                                                <p class="card-text" th:text="${noEncontrada}"></p>
+                                            </div>
+                                        </div>
                                     </tbody>
                                 </table>
+
 
                                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
                                         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
